# monorepo

monorepo/: .gitignore
monorepo/services/backup/: exclude.txt  rbackup.sh  rrestore.sh
monorepo/services/mobo-stat/: pyproject.toml  run.sh
monorepo/services/mobo-stat/src/: gui.py  main.py
monorepo/services/pyqttest/: chart.py  main.py
